--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,7 +3,63 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8f913cc",
+   "id": "159c853d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import xlwings as xw\n",
+    "import shutil\n",
+    "\n",
+    "# List of values\n",
+    "values_list = ['value1', 'value2', 'value3']\n",
+    "\n",
+    "# Iterate over each value in the list\n",
+    "for value in values_list:\n",
+    "    # Create a copy of the main workbook\n",
+    "    shutil.copyfile('wb_main.xlsx', f'wb_copy_{value}.xlsx')\n",
+    "    \n",
+    "    # Open the copied workbook\n",
+    "    wb_copy = xw.Book(f'wb_copy_{value}.xlsx')\n",
+    "    \n",
+    "    # Open sheets sh1 and sh2\n",
+    "    sh1 = wb_copy.sheets['sh1']\n",
+    "    sh2 = wb_copy.sheets['sh2']\n",
+    "    \n",
+    "    # Find the last row with data in column W for both sheets\n",
+    "    last_row_sh1 = sh1.range('W' + str(sh1.cells.rows.count)).end('up').row\n",
+    "    last_row_sh2 = sh2.range('W' + str(sh2.cells.rows.count)).end('up').row\n",
+    "    \n",
+    "    # Find the range containing the column data for both sheets\n",
+    "    range_sh1 = sh1.range(f'W1:W{last_row_sh1}')\n",
+    "    range_sh2 = sh2.range(f'W1:W{last_row_sh2}')\n",
+    "    \n",
+    "    # Find rows where column W value matches the current value\n",
+    "    rows_sh1 = [row for row in range_sh1 if row.value == value]\n",
+    "    rows_sh2 = [row for row in range_sh2 if row.value == value]\n",
+    "    \n",
+    "    # Create new sheets sh1_updated and sh2_updated\n",
+    "    sh1_updated = wb_copy.sheets.add(name='sh1_updated')\n",
+    "    sh2_updated = wb_copy.sheets.add(name='sh2_updated')\n",
+    "    \n",
+    "    # Copy the matching rows to the new sheets\n",
+    "    if rows_sh1:\n",
+    "        sh1.range(f'A1').value = sh1.range(f'A{rows_sh1[0].row}:{sh1.cells(last_row_sh1, sh1.cells.columns.count).address}').value\n",
+    "    if rows_sh2:\n",
+    "        sh2.range(f'A1').value = sh2.range(f'A{rows_sh2[0].row}:{sh2.cells(last_row_sh2, sh2.cells.columns.count).address}').value\n",
+    "    \n",
+    "    # Delete sh1 and sh2 from the workbook\n",
+    "    wb_copy.sheets['sh1'].delete()\n",
+    "    wb_copy.sheets['sh2'].delete()\n",
+    "    \n",
+    "    # Save and close the workbook\n",
+    "    wb_copy.save()\n",
+    "    wb_copy.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fce44b94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0316b48c",
+   "id": "5a2a058a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,6 +165,31 @@
     "col_A_range.copy(destination=col_E_range, transpose=True, skip_blanks=True, transpose_dest=True)\n",
     "\n",
     "# Close the workbook (optional)\n",
+    "wb.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "974fdee2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import xlwings as xw\n",
+    "\n",
+    "# Open the workbook\n",
+    "wb = xw.Book(\"C:\\\\Users\\\\KS\\\\OneDrive\\\\Documents\\\\test11.xlsx\")\n",
+    "\n",
+    "# Specify the sheet and cell you want to remove\n",
+    "sheet = wb.sheets[\"S1\"]\n",
+    "cell_to_remove = \"A2\"  # For example, remove cell A2\n",
+    "# Clear the contents of the cell and shift cells up\n",
+    "sheet.range(cell_to_remove).delete(shift=\"up\")\n",
+    "\n",
+    "# Save the workbook\n",
+    "wb.save(\"C:\\\\Users\\\\KS\\\\OneDrive\\\\Documents\\\\test112.xlsx\")\n",
+    "\n",
+    "# Close the workbook\n",
     "wb.close()\n"
    ]
   },
