--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,7 +3,56 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "159c853d",
+   "id": "16a2ed4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import xlwings as xw\n",
+    "import shutil\n",
+    "\n",
+    "# List of values\n",
+    "values_list = ['value1', 'value2', 'value3']\n",
+    "\n",
+    "# Iterate over each value in the list\n",
+    "for value in values_list:\n",
+    "    # Create a copy of the main workbook\n",
+    "    shutil.copyfile('wb_main.xlsx', f'wb_copy_{value}.xlsx')\n",
+    "    \n",
+    "    # Open the copied workbook\n",
+    "    wb_copy = xw.Book(f'wb_copy_{value}.xlsx')\n",
+    "    \n",
+    "    # Open sheets sh1 and sh2\n",
+    "    sh1 = wb_copy.sheets['sh1']\n",
+    "    sh2 = wb_copy.sheets['sh2']\n",
+    "    \n",
+    "    # Apply filter to column W in sh1 and sh2\n",
+    "    sh1.autofilter('W1').filter('W', value)\n",
+    "    sh2.autofilter('W1').filter('W', value)\n",
+    "    \n",
+    "    # Copy filtered data to new sheets\n",
+    "    sh1_updated = wb_copy.sheets.add(name='sh1_updated')\n",
+    "    sh2_updated = wb_copy.sheets.add(name='sh2_updated')\n",
+    "    \n",
+    "    sh1.range('A1').expand().copy(sh1_updated.range('A1'))\n",
+    "    sh2.range('A1').expand().copy(sh2_updated.range('A1'))\n",
+    "    \n",
+    "    # Clear filter from sh1 and sh2\n",
+    "    sh1.autofilter.show_all()\n",
+    "    sh2.autofilter.show_all()\n",
+    "    \n",
+    "    # Delete sh1 and sh2 from the workbook\n",
+    "    wb_copy.sheets['sh1'].delete()\n",
+    "    wb_copy.sheets['sh2'].delete()\n",
+    "    \n",
+    "    # Save and close the workbook\n",
+    "    wb_copy.save()\n",
+    "    wb_copy.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52b2760c",
    "metadata": {},
    "outputs": [],
    "source": [
