--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,7 +3,49 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16a2ed4f",
+   "id": "b139176e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import xlwings as xw\n",
+    "import shutil\n",
+    "\n",
+    "# List of values\n",
+    "values_list = ['value1', 'value2', 'value3']\n",
+    "\n",
+    "# Iterate over each value in the list\n",
+    "for value in values_list:\n",
+    "    # Create a copy of the main workbook\n",
+    "    shutil.copyfile('wb_main.xlsx', f'wb_copy_{value}.xlsx')\n",
+    "    \n",
+    "    # Open the copied workbook\n",
+    "    wb_copy = xw.Book(f'wb_copy_{value}.xlsx')\n",
+    "    \n",
+    "    # Open sheets sh1 and sh2\n",
+    "    sh1 = wb_copy.sheets['sh1']\n",
+    "    sh2 = wb_copy.sheets['sh2']\n",
+    "    \n",
+    "    # Apply filter on sh1 and sh2 based on column W\n",
+    "    sh1.range('W1').api.AutoFilter(1, value)\n",
+    "    sh2.range('W1').api.AutoFilter(1, value)\n",
+    "    \n",
+    "    # Copy filtered data to new sheets\n",
+    "    sh1.range('A1').current_region.copy(destination=wb_copy.sheets.add(name='sh1_updated').range('A1'))\n",
+    "    sh2.range('A1').current_region.copy(destination=wb_copy.sheets.add(name='sh2_updated').range('A1'))\n",
+    "    \n",
+    "    # Clear the filter\n",
+    "    sh1.range('W1').api.AutoFilter()\n",
+    "    sh2.range('W1').api.AutoFilter()\n",
+    "    \n",
+    "    # Save and close the workbook\n",
+    "    wb_copy.save()\n",
+    "    wb_copy.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d179b7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52b2760c",
+   "id": "0246c516",
    "metadata": {},
    "outputs": [],
    "source": [
