--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,49 +3,57 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b139176e",
+   "id": "d118b804",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import xlwings as xw\n",
+    "import openpyxl\n",
     "import shutil\n",
     "\n",
-    "# List of values\n",
-    "values_list = ['value1', 'value2', 'value3']\n",
+    "def apply_filter_and_copy(input_file, output_file, value_list):\n",
+    "    # Make a copy of the input file\n",
+    "    shutil.copy(input_file, output_file)\n",
     "\n",
-    "# Iterate over each value in the list\n",
-    "for value in values_list:\n",
-    "    # Create a copy of the main workbook\n",
-    "    shutil.copyfile('wb_main.xlsx', f'wb_copy_{value}.xlsx')\n",
-    "    \n",
-    "    # Open the copied workbook\n",
-    "    wb_copy = xw.Book(f'wb_copy_{value}.xlsx')\n",
-    "    \n",
-    "    # Open sheets sh1 and sh2\n",
-    "    sh1 = wb_copy.sheets['sh1']\n",
-    "    sh2 = wb_copy.sheets['sh2']\n",
-    "    \n",
-    "    # Apply filter on sh1 and sh2 based on column W\n",
-    "    sh1.range('W1').api.AutoFilter(1, value)\n",
-    "    sh2.range('W1').api.AutoFilter(1, value)\n",
-    "    \n",
-    "    # Copy filtered data to new sheets\n",
-    "    sh1.range('A1').current_region.copy(destination=wb_copy.sheets.add(name='sh1_updated').range('A1'))\n",
-    "    sh2.range('A1').current_region.copy(destination=wb_copy.sheets.add(name='sh2_updated').range('A1'))\n",
-    "    \n",
-    "    # Clear the filter\n",
-    "    sh1.range('W1').api.AutoFilter()\n",
-    "    sh2.range('W1').api.AutoFilter()\n",
-    "    \n",
-    "    # Save and close the workbook\n",
-    "    wb_copy.save()\n",
-    "    wb_copy.close()\n"
+    "    # Load the workbook\n",
+    "    workbook = openpyxl.load_workbook(output_file)\n",
+    "\n",
+    "    # Get the sheet\n",
+    "    sheet = workbook['Sh']\n",
+    "\n",
+    "    # Create a new sheet for copied data\n",
+    "    copied_sheet = workbook.create_sheet(title='Sh_copy')\n",
+    "\n",
+    "    # Iterate through the list of values\n",
+    "    for value in value_list:\n",
+    "        # Clear existing filters\n",
+    "        sheet.auto_filter.ref = None\n",
+    "\n",
+    "        # Apply filter to column U\n",
+    "        sheet.auto_filter.ref = 'U:U'\n",
+    "        sheet.auto_filter.add_filter_column(20, ['1', '2'])  # Replace ['1', '2'] with your value list\n",
+    "\n",
+    "        # Copy filtered rows to the new sheet\n",
+    "        for row in sheet.iter_rows():\n",
+    "            if row[20].value in value_list:\n",
+    "                copied_sheet.append([cell.value for cell in row])\n",
+    "\n",
+    "    # Remove the original sheet\n",
+    "    workbook.remove(sheet)\n",
+    "\n",
+    "    # Save the workbook\n",
+    "    workbook.save(output_file)\n",
+    "\n",
+    "# Example usage\n",
+    "input_file = 'input.xlsx'\n",
+    "output_file = 'output.xlsx'\n",
+    "value_list = ['value1', 'value2', 'value3']  # Replace with your list of values\n",
+    "apply_filter_and_copy(input_file, output_file, value_list)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d179b7b",
+   "id": "f1db7fb8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0246c516",
+   "id": "a5380c6d",
    "metadata": {},
    "outputs": [],
    "source": [
