--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,45 +3,42 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d118b804",
+   "id": "1acdbe72",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import openpyxl\n",
-    "import shutil\n",
+    "import xlwings as xw\n",
     "\n",
     "def apply_filter_and_copy(input_file, output_file, value_list):\n",
-    "    # Make a copy of the input file\n",
-    "    shutil.copy(input_file, output_file)\n",
-    "\n",
-    "    # Load the workbook\n",
-    "    workbook = openpyxl.load_workbook(output_file)\n",
+    "    # Open the workbook\n",
+    "    wb = xw.Book(input_file)\n",
     "\n",
     "    # Get the sheet\n",
-    "    sheet = workbook['Sh']\n",
+    "    sheet = wb.sheets['Sh']\n",
     "\n",
     "    # Create a new sheet for copied data\n",
-    "    copied_sheet = workbook.create_sheet(title='Sh_copy')\n",
+    "    copied_sheet = wb.sheets.add('Sh_copy')\n",
     "\n",
     "    # Iterate through the list of values\n",
     "    for value in value_list:\n",
     "        # Clear existing filters\n",
-    "        sheet.auto_filter.ref = None\n",
+    "        sheet.api.AutoFilterMode = False\n",
     "\n",
     "        # Apply filter to column U\n",
-    "        sheet.auto_filter.ref = 'U:U'\n",
-    "        sheet.auto_filter.add_filter_column(20, ['1', '2'])  # Replace ['1', '2'] with your value list\n",
+    "        sheet.range('U:U').api.AutoFilter(Field=20, Criteria1=value)  # Adjust Field index as per your column index\n",
     "\n",
     "        # Copy filtered rows to the new sheet\n",
-    "        for row in sheet.iter_rows():\n",
-    "            if row[20].value in value_list:\n",
-    "                copied_sheet.append([cell.value for cell in row])\n",
+    "        visible_range = sheet.api.AutoFilter.Range\n",
+    "        visible_range.Copy(copied_sheet.range('A1'))\n",
     "\n",
-    "    # Remove the original sheet\n",
-    "    workbook.remove(sheet)\n",
+    "    # Delete the original sheet\n",
+    "    sheet.delete()\n",
     "\n",
     "    # Save the workbook\n",
-    "    workbook.save(output_file)\n",
+    "    wb.save(output_file)\n",
+    "\n",
+    "    # Close the workbook\n",
+    "    wb.close()\n",
     "\n",
     "# Example usage\n",
     "input_file = 'input.xlsx'\n",
@@ -53,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1db7fb8",
+   "id": "98707d6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5380c6d",
+   "id": "c5b78b3f",
    "metadata": {},
    "outputs": [],
    "source": [
