--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,54 +3,48 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1acdbe72",
+   "id": "8c2fd547",
    "metadata": {},
    "outputs": [],
    "source": [
     "import xlwings as xw\n",
     "\n",
-    "def apply_filter_and_copy(input_file, output_file, value_list):\n",
+    "def apply_filter_and_copy(input_file, output_file, filter_values):\n",
     "    # Open the workbook\n",
     "    wb = xw.Book(input_file)\n",
-    "\n",
-    "    # Get the sheet\n",
-    "    sheet = wb.sheets['Sh']\n",
-    "\n",
-    "    # Create a new sheet for copied data\n",
-    "    copied_sheet = wb.sheets.add('Sh_copy')\n",
-    "\n",
-    "    # Iterate through the list of values\n",
-    "    for value in value_list:\n",
-    "        # Clear existing filters\n",
-    "        sheet.api.AutoFilterMode = False\n",
-    "\n",
-    "        # Apply filter to column U\n",
-    "        sheet.range('U:U').api.AutoFilter(Field=20, Criteria1=value)  # Adjust Field index as per your column index\n",
-    "\n",
-    "        # Copy filtered rows to the new sheet\n",
-    "        visible_range = sheet.api.AutoFilter.Range\n",
-    "        visible_range.Copy(copied_sheet.range('A1'))\n",
-    "\n",
-    "    # Delete the original sheet\n",
-    "    sheet.delete()\n",
-    "\n",
-    "    # Save the workbook\n",
+    "    \n",
+    "    # Access the sheet containing the data\n",
+    "    sheet = wb.sheets['Sheet1']  # Adjust the sheet name as needed\n",
+    "    \n",
+    "    # Iterate through filter values\n",
+    "    for value in filter_values:\n",
+    "        # Apply the filter to the desired column\n",
+    "        sheet.range('U1').api.AutoFilter(1, value)  # Assuming column U contains the data\n",
+    "        \n",
+    "        # Get the filtered range\n",
+    "        filtered_range = sheet.api.AutoFilter.Range.SpecialCells(12)  # 12 represents visible cells\n",
+    "        \n",
+    "        # Copy the filtered range to a new sheet\n",
+    "        new_sheet = wb.sheets.add()  # Add a new sheet\n",
+    "        new_sheet.name = f'Sheet_Filtered_{value}'  # Name the new sheet\n",
+    "        filtered_range.Copy()\n",
+    "        new_sheet.range('A1').PasteSpecial()\n",
+    "    \n",
+    "    # Save the workbook with the filtered data\n",
     "    wb.save(output_file)\n",
-    "\n",
-    "    # Close the workbook\n",
     "    wb.close()\n",
     "\n",
     "# Example usage\n",
     "input_file = 'input.xlsx'\n",
     "output_file = 'output.xlsx'\n",
-    "value_list = ['value1', 'value2', 'value3']  # Replace with your list of values\n",
-    "apply_filter_and_copy(input_file, output_file, value_list)\n"
+    "filter_values = ['value1', 'value2', 'value3']  # Replace with your filter values\n",
+    "apply_filter_and_copy(input_file, output_file, filter_values)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98707d6b",
+   "id": "9b4962f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5b78b3f",
+   "id": "487c8aee",
    "metadata": {},
    "outputs": [],
    "source": [
