--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,48 +3,56 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c2fd547",
+   "id": "bb8e837b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import xlwings as xw\n",
     "\n",
-    "def apply_filter_and_copy(input_file, output_file, filter_values):\n",
-    "    # Open the workbook\n",
-    "    wb = xw.Book(input_file)\n",
-    "    \n",
-    "    # Access the sheet containing the data\n",
-    "    sheet = wb.sheets['Sheet1']  # Adjust the sheet name as needed\n",
-    "    \n",
-    "    # Iterate through filter values\n",
-    "    for value in filter_values:\n",
-    "        # Apply the filter to the desired column\n",
-    "        sheet.range('U1').api.AutoFilter(1, value)  # Assuming column U contains the data\n",
-    "        \n",
-    "        # Get the filtered range\n",
-    "        filtered_range = sheet.api.AutoFilter.Range.SpecialCells(12)  # 12 represents visible cells\n",
-    "        \n",
-    "        # Copy the filtered range to a new sheet\n",
-    "        new_sheet = wb.sheets.add()  # Add a new sheet\n",
-    "        new_sheet.name = f'Sheet_Filtered_{value}'  # Name the new sheet\n",
-    "        filtered_range.Copy()\n",
-    "        new_sheet.range('A1').PasteSpecial()\n",
-    "    \n",
-    "    # Save the workbook with the filtered data\n",
-    "    wb.save(output_file)\n",
-    "    wb.close()\n",
+    "# Open the Excel workbook\n",
+    "wb = xw.Book(\"path_to_your_workbook.xlsx\")\n",
     "\n",
-    "# Example usage\n",
-    "input_file = 'input.xlsx'\n",
-    "output_file = 'output.xlsx'\n",
-    "filter_values = ['value1', 'value2', 'value3']  # Replace with your filter values\n",
-    "apply_filter_and_copy(input_file, output_file, filter_values)\n"
+    "# Iterate over each sheet\n",
+    "for sheet in wb.sheets:\n",
+    "    # Insert \"Summary\" in cell B2\n",
+    "    sheet.range(\"B2\").value = \"Summary\"\n",
+    "    \n",
+    "    # Create the first table\n",
+    "    headers_table1 = [\"SubF\", \"Role\", \"Total\", \"High\", \"Low\"]\n",
+    "    data_table1 = [[\"\" for _ in range(len(headers_table1))] for _ in range(5)]  # 5 rows including header\n",
+    "    table1_range = sheet.range(\"B3\").expand(\"table\")\n",
+    "    table1_range.clear_contents()\n",
+    "    table1_range.value = [headers_table1] + data_table1\n",
+    "    table1_range.rows[0].color = (0, 112, 192)  # Blue background for header row\n",
+    "    table1_range.rows[-1].color = (0, 112, 192)  # Blue background for last row\n",
+    "    \n",
+    "    # Insert \"Sheet name\" in cell B10\n",
+    "    sheet.range(\"B10\").value = \"Sheet name\"\n",
+    "    \n",
+    "    # Create the second table\n",
+    "    headers_table2 = [\"C and H\", \"Y-TD\", \"Actuals-Feb\", \"Actuals-Jan\", \"Target-y\", \"Target-fy\", \"Mar-forecast\", \"Extra\"]\n",
+    "    data_table2 = [[\"\" for _ in range(len(headers_table2))] for _ in range(8)]  # 8 rows including header\n",
+    "    table2_range = sheet.range(\"B11\").expand(\"table\")\n",
+    "    table2_range.clear_contents()\n",
+    "    table2_range.value = [headers_table2] + data_table2\n",
+    "    \n",
+    "    # Move down existing contents to accommodate the new tables\n",
+    "    existing_data_range = sheet.range(\"A1\").expand(\"table\")\n",
+    "    num_existing_rows = existing_data_range.shape[0]\n",
+    "    table1_range = sheet.range(table1_range.address)\n",
+    "    table2_range = sheet.range(table2_range.address)\n",
+    "    existing_data_range.offset(row_offset=13).value = existing_data_range.value\n",
+    "    existing_data_range.clear_contents()\n",
+    "\n",
+    "# Save the workbook\n",
+    "wb.save()\n",
+    "wb.close()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b4962f9",
+   "id": "5d2d7163",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "487c8aee",
+   "id": "a8e91a7c",
    "metadata": {},
    "outputs": [],
    "source": [
