--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -2,8 +2,148 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "id": "dedb7662",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       R  H  L  Total\n",
+      "0      A  3  0      3\n",
+      "1      B  1  1      2\n",
+      "2      C  1  1      2\n",
+      "3      D  0  1      1\n",
+      "4  Total  5  3      8\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Example DataFrame\n",
+    "data = {'R': ['A', 'B', 'A', 'C', 'B', 'A', 'D', 'C'],\n",
+    "        'HL': ['H', 'L', 'H', 'L', 'H', 'H', 'L', 'H']}\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Initialize dictionaries to store counts\n",
+    "count_h = {}\n",
+    "count_l = {}\n",
+    "\n",
+    "# Iterate through the DataFrame to count occurrences of 'H' and 'L' for each unique value in 'R'\n",
+    "for index, row in df.iterrows():\n",
+    "    r_value = row['R']\n",
+    "    hl_value = row['HL']\n",
+    "    if r_value not in count_h:\n",
+    "        count_h[r_value] = 0\n",
+    "        count_l[r_value] = 0\n",
+    "    if hl_value == 'H':\n",
+    "        count_h[r_value] += 1\n",
+    "    elif hl_value == 'L':\n",
+    "        count_l[r_value] += 1\n",
+    "\n",
+    "# Create a DataFrame to store the counts\n",
+    "counts_df = pd.DataFrame({'R': list(count_h.keys()),\n",
+    "                          'H': list(count_h.values()),\n",
+    "                          'L': list(count_l.values())})\n",
+    "\n",
+    "# Calculate the total for each 'R' value\n",
+    "counts_df['Total'] = counts_df['H'] + counts_df['L']\n",
+    "\n",
+    "# Calculate the totals for 'H', 'L', and 'Total'\n",
+    "totals = counts_df[['H', 'L', 'Total']].sum().tolist()\n",
+    "\n",
+    "# Add a row for totals\n",
+    "counts_df.loc[len(counts_df)] = ['Total'] + totals\n",
+    "\n",
+    "print(counts_df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "01197c69",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   R  Total_H_Count  Total_L_Count  Total_Count\n",
+      "0  A              3              3            6\n",
+      "1  B              2              2            4\n",
+      "2  C              2              2            4\n",
+      "3  D              1              1            2\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Example DataFrame\n",
+    "data = {'R': ['A', 'B', 'A', 'C', 'B', 'A', 'D', 'C'],\n",
+    "        'H': ['X', 'Y', 'X', 'X', 'Z', 'Y', 'Z', 'Y'],\n",
+    "        'L': ['M', 'N', 'M', 'N', 'N', 'M', 'N', 'M']}\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Initialize dictionaries for counting occurrences\n",
+    "count_dict_r = {}\n",
+    "count_dict_h = {}\n",
+    "count_dict_l = {}\n",
+    "\n",
+    "# Count occurrences in column 'R'\n",
+    "for value in df['R']:\n",
+    "    count_dict_r[value] = count_dict_r.get(value, 0) + 1\n",
+    "\n",
+    "# Count occurrences in column 'H'\n",
+    "for value in df['H']:\n",
+    "    count_dict_h[value] = count_dict_h.get(value, 0) + 1\n",
+    "\n",
+    "# Count occurrences in column 'L'\n",
+    "for value in df['L']:\n",
+    "    count_dict_l[value] = count_dict_l.get(value, 0) + 1\n",
+    "\n",
+    "print(\"Counts for column 'R':\", count_dict_r)\n",
+    "print(\"Counts for column 'H':\", count_dict_h)\n",
+    "print(\"Counts for column 'L':\", count_dict_l)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "44cdb531",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'A': 3, 'B': 2, 'C': 2, 'D': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Example DataFrame\n",
+    "data = {'R': ['A', 'B', 'A', 'C', 'B', 'A', 'D', 'C']}\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Initialize an empty dictionary\n",
+    "count_dict = {}\n",
+    "\n",
+    "# Iterate through the DataFrame to count occurrences of each unique value in column 'R'\n",
+    "for value in df['R']:\n",
+    "    count_dict[value] = count_dict.get(value, 0) + 1\n",
+    "\n",
+    "print(count_dict)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "bb8e837b",
+   "id": "c813948b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d2d7163",
+   "id": "c553e71d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8e91a7c",
+   "id": "01ca749d",
    "metadata": {},
    "outputs": [],
    "source": [
