--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "dedb7662",
+   "id": "9c7f65d0",
    "metadata": {},
    "outputs": [
     {
@@ -20,50 +20,76 @@
     }
    ],
    "source": [
+    "import xlwings as xw\n",
     "import pandas as pd\n",
     "\n",
-    "# Example DataFrame\n",
-    "data = {'R': ['A', 'B', 'A', 'C', 'B', 'A', 'D', 'C'],\n",
-    "        'HL': ['H', 'L', 'H', 'L', 'H', 'H', 'L', 'H']}\n",
-    "df = pd.DataFrame(data)\n",
+    "# Open the source workbook\n",
+    "source_wb = xw.Book(\"source_workbook.xlsx\")\n",
     "\n",
-    "# Initialize dictionaries to store counts\n",
-    "count_h = {}\n",
-    "count_l = {}\n",
+    "# Create a new workbook for the results\n",
+    "result_wb = xw.Book()\n",
     "\n",
-    "# Iterate through the DataFrame to count occurrences of 'H' and 'L' for each unique value in 'R'\n",
-    "for index, row in df.iterrows():\n",
-    "    r_value = row['R']\n",
-    "    hl_value = row['HL']\n",
-    "    if r_value not in count_h:\n",
-    "        count_h[r_value] = 0\n",
-    "        count_l[r_value] = 0\n",
-    "    if hl_value == 'H':\n",
-    "        count_h[r_value] += 1\n",
-    "    elif hl_value == 'L':\n",
-    "        count_l[r_value] += 1\n",
+    "# Iterate through each sheet of the source workbook\n",
+    "for sheet in source_wb.sheets:\n",
+    "    # Read the data from the current sheet into a DataFrame\n",
+    "    df = sheet.used_range.options(pd.DataFrame, index=False, header=True).value\n",
+    "    \n",
+    "    # Initialize dictionaries to store counts\n",
+    "    count_h = {}\n",
+    "    count_l = {}\n",
     "\n",
-    "# Create a DataFrame to store the counts\n",
-    "counts_df = pd.DataFrame({'R': list(count_h.keys()),\n",
-    "                          'H': list(count_h.values()),\n",
-    "                          'L': list(count_l.values())})\n",
+    "    # Iterate through the DataFrame to count occurrences of 'H' and 'L' for each unique value in 'R'\n",
+    "    for index, row in df.iterrows():\n",
+    "        r_value = row['R']\n",
+    "        hl_value = row['HL']\n",
+    "        if r_value not in count_h:\n",
+    "            count_h[r_value] = 0\n",
+    "            count_l[r_value] = 0\n",
+    "        if hl_value == 'H':\n",
+    "            count_h[r_value] += 1\n",
+    "        elif hl_value == 'L':\n",
+    "            count_l[r_value] += 1\n",
     "\n",
-    "# Calculate the total for each 'R' value\n",
-    "counts_df['Total'] = counts_df['H'] + counts_df['L']\n",
+    "    # Create a DataFrame to store the counts\n",
+    "    counts_df = pd.DataFrame({'R': list(count_h.keys()),\n",
+    "                              'H': list(count_h.values()),\n",
+    "                              'L': list(count_l.values())})\n",
     "\n",
-    "# Calculate the totals for 'H', 'L', and 'Total'\n",
-    "totals = counts_df[['H', 'L', 'Total']].sum().tolist()\n",
+    "    # Calculate the total for each 'R' value\n",
+    "    counts_df['Total'] = counts_df['H'] + counts_df['L']\n",
     "\n",
-    "# Add a row for totals\n",
-    "counts_df.loc[len(counts_df)] = ['Total'] + totals\n",
+    "    # Calculate the totals for 'H', 'L', and 'Total'\n",
+    "    totals = counts_df[['H', 'L', 'Total']].sum().tolist()\n",
     "\n",
-    "print(counts_df)\n"
+    "    # Add a row for totals\n",
+    "    counts_df.loc[len(counts_df)] = ['Total'] + totals\n",
+    "\n",
+    "    # Write the results to the new workbook with the same sheet name\n",
+    "    result_sheet = result_wb.sheets.add(sheet.name)\n",
+    "    result_sheet.range(\"A1\").value = counts_df\n",
+    "\n",
+    "    # Apply borders to the table\n",
+    "    table_range = result_sheet.range(\"A1\").expand()\n",
+    "    table_range.api.Borders.Weight = 2  # Medium weight borders\n",
+    "\n",
+    "    # Color the first and last rows with light blue background\n",
+    "    first_row_range = result_sheet.range((1, 1), (1, counts_df.shape[1]))\n",
+    "    last_row_range = result_sheet.range((counts_df.shape[0], 1), (counts_df.shape[0], counts_df.shape[1]))\n",
+    "    first_row_range.api.Interior.Color = 15131566  # Light blue\n",
+    "    last_row_range.api.Interior.Color = 15131566  # Light blue\n",
+    "\n",
+    "# Save the result workbook\n",
+    "result_wb.save(\"result_workbook.xlsx\")\n",
+    "\n",
+    "# Close both workbooks\n",
+    "source_wb.close()\n",
+    "result_wb.close()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "01197c69",
+   "id": "6c9b885b",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "44cdb531",
+   "id": "dc41380e",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c813948b",
+   "id": "19e093b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c553e71d",
+   "id": "5fed9ed8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01ca749d",
+   "id": "3839a3f3",
    "metadata": {},
    "outputs": [],
    "source": [
