--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -2,8 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "e76557ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from openpyxl import load_workbook\n",
+    "from openpyxl.utils import get_column_letter\n",
+    "\n",
+    "# Load the base workbook (wb1) and the second workbook (wb2)\n",
+    "wb1 = load_workbook(filename='base_workbook.xlsx')\n",
+    "wb2 = load_workbook(filename='second_workbook.xlsx')\n",
+    "\n",
+    "# Iterate through each sheet in the base workbook\n",
+    "for sheet_name in wb1.sheetnames:\n",
+    "    # Get the corresponding sheet in wb2\n",
+    "    sheet2 = wb2[sheet_name]\n",
+    "\n",
+    "    # Get the corresponding sheet in wb1\n",
+    "    sheet1 = wb1[sheet_name]\n",
+    "\n",
+    "    # Iterate through rows in wb2 and copy data to wb1 starting from row 3\n",
+    "    for row_idx, row in enumerate(sheet2.iter_rows(min_row=3, values_only=True), start=3):\n",
+    "        for col_idx, value in enumerate(row, start=1):\n",
+    "            sheet1.cell(row=row_idx, column=col_idx, value=value)\n",
+    "\n",
+    "# Save the changes to the base workbook\n",
+    "wb1.save('combined_workbook.xlsx')\n",
+    "\n",
+    "# Close both workbooks\n",
+    "wb1.close()\n",
+    "wb2.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
-   "id": "9c7f65d0",
+   "id": "341088e9",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6c9b885b",
+   "id": "0b2f871b",
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "dc41380e",
+   "id": "6759b551",
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19e093b0",
+   "id": "28abf90f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fed9ed8",
+   "id": "1524f845",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3839a3f3",
+   "id": "c968c843",
    "metadata": {},
    "outputs": [],
    "source": [
