--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -7,32 +7,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "from openpyxl import load_workbook\n",
-    "from openpyxl.utils import get_column_letter\n",
     "\n",
-    "# Load the base workbook (wb1) and the second workbook (wb2)\n",
-    "wb1 = load_workbook(filename='base_workbook.xlsx')\n",
-    "wb2 = load_workbook(filename='second_workbook.xlsx')\n",
+    "# Load the Excel workbook\n",
+    "workbook = load_workbook('your_workbook.xlsx')\n",
     "\n",
-    "# Iterate through each sheet in the base workbook\n",
-    "for sheet_name in wb1.sheetnames:\n",
-    "    # Get the corresponding sheet in wb2\n",
-    "    sheet2 = wb2[sheet_name]\n",
+    "# Initialize lists to store the summary data\n",
+    "sheet_names = []\n",
+    "high_totals = []\n",
+    "low_totals = []\n",
+    "total_totals = []\n",
     "\n",
-    "    # Get the corresponding sheet in wb1\n",
-    "    sheet1 = wb1[sheet_name]\n",
+    "# Iterate over each sheet in the workbook\n",
+    "for sheet_name in workbook.sheetnames:\n",
+    "    sheet = workbook[sheet_name]\n",
+    "    \n",
+    "    # Get the data range\n",
+    "    data_range = sheet.iter_rows(values_only=True)\n",
+    "    next(data_range)  # Skip the header row\n",
+    "    \n",
+    "    # Initialize totals for this sheet\n",
+    "    high_total = 0\n",
+    "    low_total = 0\n",
+    "    total_total = 0\n",
+    "    \n",
+    "    # Iterate over the rows in the sheet\n",
+    "    for row in data_range:\n",
+    "        role, high, low, total = row\n",
+    "        high_total += high\n",
+    "        low_total += low\n",
+    "        total_total += total\n",
+    "    \n",
+    "    # Append data for this sheet to the lists\n",
+    "    sheet_names.append(sheet_name)\n",
+    "    high_totals.append(high_total)\n",
+    "    low_totals.append(low_total)\n",
+    "    total_totals.append(total_total)\n",
     "\n",
-    "    # Iterate through rows in wb2 and copy data to wb1 starting from row 3\n",
-    "    for row_idx, row in enumerate(sheet2.iter_rows(min_row=3, values_only=True), start=3):\n",
-    "        for col_idx, value in enumerate(row, start=1):\n",
-    "            sheet1.cell(row=row_idx, column=col_idx, value=value)\n",
+    "# Create the summary DataFrame\n",
+    "summary_df = pd.DataFrame({\n",
+    "    'SheetName': sheet_names,\n",
+    "    'HighTotal': high_totals,\n",
+    "    'LowTotal': low_totals,\n",
+    "    'TotalTotal': total_totals\n",
+    "})\n",
     "\n",
-    "# Save the changes to the base workbook\n",
-    "wb1.save('combined_workbook.xlsx')\n",
+    "# Calculate the grand totals\n",
+    "grand_totals = summary_df[['HighTotal', 'LowTotal', 'TotalTotal']].sum()\n",
+    "grand_totals['SheetName'] = 'Grand Total'\n",
     "\n",
-    "# Close both workbooks\n",
-    "wb1.close()\n",
-    "wb2.close()\n"
+    "# Append the grand totals to the summary DataFrame\n",
+    "summary_df = summary_df.append(grand_totals, ignore_index=True)\n",
+    "\n",
+    "# Save it in a df\n",
+    "print(summary_df)\n"
    ]
   },
   {
