--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -24,8 +24,7 @@
     "    sheet = workbook[sheet_name]\n",
     "    \n",
     "    # Get the data range\n",
-    "    data_range = sheet.iter_rows(values_only=True)\n",
-    "    next(data_range)  # Skip the header row\n",
+    "    data_range = sheet.iter_rows(min_row=3, values_only=True)\n",
     "    \n",
     "    # Initialize totals for this sheet\n",
     "    high_total = 0\n",
@@ -34,10 +33,32 @@
     "    \n",
     "    # Iterate over the rows in the sheet\n",
     "    for row in data_range:\n",
-    "        role, high, low, total = row\n",
-    "        high_total += high\n",
-    "        low_total += low\n",
-    "        total_total += total\n",
+    "        # Sum all values in the row starting from the second column (index 1)\n",
+    "        high_value = row[1]\n",
+    "        low_value = row[2]\n",
+    "        total_value = row[3]\n",
+    "        \n",
+    "        if isinstance(high_value, str):\n",
+    "            try:\n",
+    "                high_value = int(high_value)\n",
+    "            except ValueError:\n",
+    "                high_value = 0\n",
+    "        \n",
+    "        if isinstance(low_value, str):\n",
+    "            try:\n",
+    "                low_value = int(low_value)\n",
+    "            except ValueError:\n",
+    "                low_value = 0\n",
+    "        \n",
+    "        if isinstance(total_value, str):\n",
+    "            try:\n",
+    "                total_value = int(total_value)\n",
+    "            except ValueError:\n",
+    "                total_value = 0\n",
+    "        \n",
+    "        high_total += high_value\n",
+    "        low_total += low_value\n",
+    "        total_total += total_value\n",
     "    \n",
     "    # Append data for this sheet to the lists\n",
     "    sheet_names.append(sheet_name)\n",
